# flutter_surrealdb

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_surrealdb_example/: MainActivity.kt
example/benchmark/: main.dart
example/integration_test/: all_test.dart  crud_test.dart  fuzz_test.dart  live.dart  live_test.dart  minimal.dart  minimal_test.dart  query_test.dart  sim_test.dart  simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_surrealdb.podspec
lib/: engine.dart  flutter_surrealdb.dart  utils.dart
lib/data/: notification.dart  options.dart  ressource.dart
lib/error/: query.dart
lib/rpc/: embedded.dart  engine.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: engine.dart  engine.freezed.dart  options.dart  options.freezed.dart  simple.dart
linux/: CMakeLists.txt
macos/: flutter_surrealdb.podspec
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: connect.rs  engine.rs  mod.rs  options.rs  simple.rs
rust/src/private/: mod.rs  wrapper.rs
windows/: CMakeLists.txt
