[package]
name = "flutter_surrealdb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = { version = "2.3.7", features = ["kv-surrealkv", "kv-mem"] }
anyhow = "1.0.98"
serde_json = "1.0.141"
futures = "0.3.28"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
panic = "abort"
