[package]
name = "flutter_surrealdb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[workspace.dependencies]
surrealdb-core = { version = "=3.0.0-alpha.14" }
surrealdb-types = { version = "=3.0.0-alpha.14" }

[dependencies]
flutter_rust_bridge = {version="=2.11.1",features=["log"]}
tokio = "1.47.1"
surrealdb-types = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
surrealdb-core = { workspace = true, features = ["kv-mem"] }
channel = { version = "2.3.1", package = "async-channel" }
anyhow = "1.0.98"
serde_json = "1.0.142"
futures = "0.3.28"
uuid = "1.8.0"
arc-swap = "1.7.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
lazy_static = "1.4.0"
dashmap   = "6.1.0"

# [target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
# surrealdb-core = { workspace = true, features = ["kv-rocksdb"] }

[target.'cfg(any(target_os = "android", target_os = "windows", target_os = "linux", target_os = "macos", target_os = "ios"))'.dependencies]
surrealdb-core = { workspace = true, features = ["kv-surrealkv"] }

#wasm32-unknown-unknown
[target.'cfg(target_arch = "wasm32")'.dependencies]
surrealdb-core = { workspace = true, features = ["kv-indxdb"] }


# [target.wasm32-unknown-unknown.dependencies]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = "s"
strip = true
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
panic = "abort"


[build-dependencies]
cargo-lock = "10.0.1"
flutter_rust_bridge_codegen = "=2.11.1"
